Interfaces Projections for Category and Recipe createds.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost/food_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root12
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 
-
-spring.security.oauth2.client.registration.facebook.client-id=<725590047930246> 
-spring.security.oauth2.client.registration.facebook.client-secret=<bfda72bf81057b02efeffac9302db1be>
