--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/food_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/food_db?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root12
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
