--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>2.4.0.RELEASE</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
 <!--		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
@@ -65,14 +72,14 @@
 		</dependency>
 -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt -->
-		<!--
+
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
 			<version>1.1.0.RELEASE</version>
 		</dependency>
--->
+
 
 	</dependencies>
 
